Downgrade a Java 8 por problemas con JavaFX 11